# Vulkan-RTX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini
.github/: build-on-push.yaml
.github/workflows/: build-on-push.yaml
Includes/: Application.cpp  Application.h  Application.hpp  Application.ixx  Logger.ixx
Includes/WindowManager/: WindowManager.cpp  WindowManager.h  WindowManager.ixx
Internal/: VulkanRtx.cpp  VulkanRtx.hpp
Internal/Application/: Client.cpp  Client.hpp
Internal/Application/ApplicationState/: ApplicationState.cpp  ApplicationState.hpp
Internal/Application/AssetsManger/: AssetsManager.cpp  AssetsManager.hpp
Internal/Application/ECS/: Coordinator.cpp  Coordinator.hpp  ECSCoordinator.cpp  ECSCoordinator.hpp  Entity.hpp  Types.hpp
Internal/Application/Enums/: ClientEnums.hpp
Internal/Application/GLTFExporter/: GLTFExporter.cpp  GLTFExporter.hpp
Internal/Application/GLTFLoader/: GltfLoader.cpp  GltfLoader.hpp  LoadSceneLights.cpp  LoadSceneLights.hpp
Internal/Application/IntersectionTests/: IntersectionTests.cpp  IntersectionTests.hpp
Internal/Application/Lightning/: LightStructs.hpp
Internal/Application/Logger/: Logger.cpp  Logger.hpp
Internal/Application/Structs/: ApplicationStructs.hpp  LightStructs.hpp  ParameterStructs.hpp
Internal/Application/Utils/: ApplicationUtils.cpp  ApplicationUtils.hpp  GizmoUtils.cpp  GizmoUtils.hpp  LinearyTransformedCosinesValues.cpp  LinearyTransformedCosinesValues.hpp  LookUpTables.cpp  LookUpTables.hpp  MathUtils.cpp  MathUtils.hpp  Uuid.hpp
Internal/Application/VertexArray/: VertexArray.cpp  VertexArray.hpp
Internal/Application/WindowManager/: WindowManager.cpp  WindowManager.hpp
Internal/Application/World/: World.cpp  World.hpp
Internal/Client/: Client.cpp  Client.hpp
Internal/Client/Enums/: ClientEnums.hpp
Internal/Client/VertexArray/: VertexArray.hpp
Internal/Client/WindowManager/: WindowManager.hpp
Internal/Editor/: Editor.cpp  Editor.hpp  EditorOptions.hpp  Index.cpp  Index.hpp
Internal/Editor/UIContext/: UIContext.cpp  UIContext.hpp  ViewPortContext.hpp
Internal/Editor/UserInterface/: IUserInterfaceElement.cpp  IUserInterfaceElement.hpp
Internal/Editor/ViewPort/: ViewPort.cpp  ViewPort.hpp
Internal/Editor/Views/: Index.cpp  Index.hpp  MenuBar.cpp  MenuBar.hpp
Internal/Edittor/UserInterface/: IUserInterfaceElement.cpp
Internal/Edittor/ViewPort/: ViewPort.cpp
Internal/Includes/: Application.ixx  Logger.ixx
Internal/Includes/Logger/: Logger.cpp  Logger.hpp
Internal/Includes/VertexArray/: VertexArray.cpp  VertexArray.hpp
Internal/Includes/WindowManager/: WindowManager.cpp  WindowManager.hpp  WindowManager.ixx
Internal/Vulkan/: VChecker.ixx  VDevices.ixx  VInstance.ixx  VSelector.ixx
Internal/Vulkan/Global/: EngineOptions.hpp  GlobalState.hpp  GlobalState.ixx  GlobalStructs.hpp  GlobalVariables.cpp  GlobalVariables.hpp  GlobalVulkanEnums.hpp  RenderingOptions.hpp  VulkanStructs.hpp
Internal/Vulkan/Renderer/: BaseRenderer.hpp  RenderingSystem.cpp  RenderingSystem.hpp  RenderingUtils.cpp  RenderingUtils.hpp  SceneRenderer.cpp  SceneRenderer.hpp  UserInterfaceRenderer.hpp  VRenderer.cpp  VRenderer.hpp
Internal/Vulkan/Utils/: VChecker.cpp  VChecker.hpp  VFactories.cpp  VFactories.hpp  VGeneralUtils.cpp  VGeneralUtils.hpp  VIimageTransitionCommands.hpp  VImageTransitionCommands.cpp  VLogger.cpp  VLogger.hpp  VLogger.ixx  VPipelineBarriers.cpp  VPipelineBarriers.hpp  VSelector.cpp  VSelector.hpp
Internal/Vulkan/VFrameData/: VFrameData.cpp  VFrameData.hpp
Internal/Vulkan/VulkanCore/: VInstance.cpp  VInstance.hpp  VInstance.ixx  VObject.cpp  VObject.hpp  VkObject.cpp  VkObject.hpp
Resources/: LTC_Values.h
Resources/cottage/: license.txt  scene.gltf
Shaders/: compileSlang.ps1  compileSlang.py  compileSlang.sh
Shaders/Compiled/: AmbientOcclusionPass.spv  Atm_MultipleScatteringLut.spv  Atm_SkyViewLut.spv  Atm_TransmitanceLut.spv  AtmospherePass.frag.spv  AtmospherePass.vert.spv  AverageLuminance.spv  BRDFLut.frag.spv  BRDFLut.spv  BRDFLut.vert.spv  BasicTriangle.vert.spv  Bilaterial-Filter.spv  BloomCombine.spv  BloomDownsample.spv  BloomUpSample.spv  CompositePass.spv  DebugGeometry.frag.spv  DebugLines.frag.slang.spv  DebugLines.vert.slang.spv  DebugLines.vert.spv  DepthPrePass.frag.spv  DepthPrePass.vert.spv  EditorBilboard.frag.spv  EditorBillboard.vert.slang.spv  EditorBillboard.vert.spv  FogMerge.frag.spv  FogMerge.vert.spv  FogVolume.frag.spv  FogVolume.vert.spv  GGXColourFragment.frag.spv  GGXColourFragmentMultiLight.frag.spv  HDRToCubeMap.frag.spv  HDRToCubeMap.vert.spv  IrradianceMap.frag.spv  IrradianceMap.vert.spv  IrradianceMapImportanceSample.frag.spv  LensFlare.frag.spv  LensFlare.vert.spv  LuminanceHistrogram.spv  Outliines.frag.slang.spv  (+27 more)
Shaders/EnvGeneration/: BRDFLut.slang  HDRToCubeMap.slang  IrradianceMap.slang  IrradianceMapImportanceSample.slang  Prefilter.slang
Shaders/Fragment/: BaseTriangleFragment.frag  DebugGeometry.frag.slang  DebugLines.frag.slang  EditorBilboard.frag.slang  Example.farg.slang  GGXColorFragment.frag  GGXColourFragment.frag.slang  GGXColourFragmentMultiLight.frag.slang  Light.slang  Material.slang  Outliines.frag.slang  RayTracer.frag.slang  SkyBox.frag.slang  TriangleFragment.frag  Utils.slang
Shaders/RTX/: SimpleRayTracing.slang
Shaders/Slang/: BasicPBR.slang  shader.spv
Shaders/Source/Compute/: AmbientOcclusionPass.slang  Atm_MultipleScatteringLut.slang  Atm_SkyViewLut.slang  Atm_TransmitanceLut.slang  AverageLuminance.slang  BRDFLut.slang  Bilaterial-Filter.slang  BloomCombine.slang  BloomDownsample.slang  BloomUpSample.slang  CompositePass.slang  LuminanceHistrogram.slang  Particles.comp  RTReflections.slang  ShadowMapPass.slang  Test.slang  Upscale.slang  VolumetricFog.slang
Shaders/Vertex/: BaseTriangleVertex.vert  BasicTriangle.vert.slang  DebugLines.vert.slang  EditorBillboard.vert.slang  ParticleVertex.vert  RayTracer.vert.slang  SkyBox.vert.slang  TriangleVertex.vert
Shaders/modules/: Light.slang  Material.slang  Utils.slang
src/: main.cpp
(+313 files in other folders)
